--- a/travel-guide-analysis.ipynb
+++ b/travel-guide-analysis.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file=pd.read_csv('/home/datagirl/final_task/dilans_data.csv', delimiter=';', names = ['date', 'event_type', 'country', 'user_id', 'source', 'topic'], dtype={'user_id':np.str})"
+    "read_file=pd.read_csv('/../travel_data.csv', delimiter=';', names = ['date', 'event_type', 'country', 'user_id', 'source', 'topic'], dtype={'user_id':np.str})"
    ]
   },
   {
